--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ollama": "^0.4.9",
+    "openai": "^4.28.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
