--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "ollama": "^0.4.9",
     "openai": "^4.28.4",
     "react": "^18.2.0",
